--- a/dinosaurios/templates/dinosaurios/dinosario_create_form.html
+++ b/dinosaurios/templates/dinosaurios/dinosario_create_form.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block titulo %}
-   Nuevo periodo 
+   Nuevo dinosaurio 
 {% endblock titulo %}
 
 {% block contenido %}
-    <h1>Nuevo periodo</h1>
+    <h1>Nuevo dinosaurio</h1>
     <form method="post" class="form">
         {% csrf_token %}
         {{form.as_p}}
