--- a/dinosaurios/templates/dinosaurios/dinosaurio_form.html
+++ b/dinosaurios/templates/dinosaurios/dinosaurio_form.html
@@ -6,7 +6,7 @@
 
 {% block contenido %}
     <h1>Nuevo dinosaurio</h1>
-    <form method="post" class="form">
+    <form method="post" class="form" enctype="multipart/form-data">
         {% csrf_token %}
         {{form.as_p}}
         <button type="submit" class="btn btn-primary">Agregar</button>
