--- a/dinosaurios/templates/dinosaurios/dinosaurio_list.html
+++ b/dinosaurios/templates/dinosaurios/dinosaurio_list.html
@@ -25,8 +25,8 @@
                     <td>{{dino.periodo}}</td>
                     <td><img src="{{MEDIA_URL}}{{dino.imagen}}" width="60px" alt="{{dino.nombre}}"></td>
                     <td>
-                        <a href="" class="btn btn-danger btn-sm">Eliminar</a>
-                        <a href="" class="btn btn-success btn-sm">Editar</a>
+                        <a href="{% url "eliminar_dinos" dino.id %}" class="btn btn-danger btn-sm">Eliminar</a>
+                        <a href="{% url "editar_dinos" dino.id %}" class="btn btn-success btn-sm">Editar</a>
                     </td>
                 </tr>
             {% endfor %}
