--- a/dinosaurios/templates/dinosaurios/dinosaurio_list.html
+++ b/dinosaurios/templates/dinosaurios/dinosaurio_list.html
@@ -5,9 +5,9 @@
 {% endblock titulo %}
 
 {% block contenido %}
-    <h1>Lista Dinosaurios</h1>
-    <a href="{% url "agregar_dino" %}" class="btn btn-primary">Agregar dinosaurio</a>
-    <table class="table table-striped">
+    <h3>Lista dinosaurios</h3>
+    <a href="{% url "agregar_dino" %}" class="btn btn-primary bt-sm">Agregar dinosaurio</a>
+    <table class="table table-striped mt-3">
         <thead class="thead-dark">
             <th>ID Dinosaurio</th>
             <th>Nombre del dinosaurio</th>
