--- a/dinosaurios/templates/editar.html
+++ b/dinosaurios/templates/editar.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Actualizar periodo</h1>
-    <form method="post">
+    <form method="post" class="form">
         {% csrf_token %}
         {{form.as_p}}
         <button type="submit">Guardar</button>
