--- a/dinosaurios/templates/periodos.html
+++ b/dinosaurios/templates/periodos.html
@@ -5,9 +5,9 @@
 {% endblock titulo %}
 
 {% block contenido %}
-    <h1>Periodos</h1>
-    <a href="{% url "agregar_periodo" %}" class="btn btn-primary">Agregar periodo</a>
-    <table class="table table-striped">
+    <h3>Lista periodos</h3>
+    <a href="{% url "agregar_periodo" %}" class="btn btn-primary bt-sm">Agregar periodo</a>
+    <table class="table table-striped mt-3">
         <thead class="thead-dark">
             <th>ID Periodo</th>
             <th>Nombre del periodo</th>
