agrega LoginRequired y PermissionRequired

--- a/dinosaurios/templates/base.html
+++ b/dinosaurios/templates/base.html
@@ -28,7 +28,7 @@
                 </li>
                 <li class="nav-item dropdown ml-auto">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    {{request.user}}
+                    {{user}}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Mi cuenta</a>
