Agrega la redacción de las pruebas funcionales

--- a/dinosaurios/templates/dinosaurios/dinosaurio_list.html
+++ b/dinosaurios/templates/dinosaurios/dinosaurio_list.html
@@ -6,7 +6,7 @@
 
 {% block contenido %}
     <h3>Lista dinosaurios</h3>
-    <a href="{% url "agregar_dino" %}" class="btn btn-primary bt-sm">Agregar dinosaurio</a>
+    <a href="{% url "nuevo_dino" %}" class="btn btn-primary bt-sm">Agregar dinosaurio</a>
     <table class="table table-striped mt-3">
         <thead class="thead-dark">
             <th>ID Dinosaurio</th>
