--- a/dinosaurios/templates/base.html
+++ b/dinosaurios/templates/base.html
@@ -34,7 +34,7 @@
                     <a class="dropdown-item" href="#">Mi cuenta</a>
                     <a class="dropdown-item" href="#">Datos personales</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Cerrar sesión</a>
+                    <a class="dropdown-item" href="{% url "logout" %}">Cerrar sesión</a>
                     </div>
                 </li>
                 </ul>
